extends Control
class_name DialogueBox

## /** íŠœí† ë¦¬ì–¼ ëŒ€í™”ì°½ UI
##  * í•˜ë‹¨ì— í‘œì‹œë˜ëŠ” ëŒ€í™”ì°½ìœ¼ë¡œ íƒ€ì´í•‘ íš¨ê³¼ì™€ í•¨ê»˜ í…ìŠ¤íŠ¸ë¥¼ í‘œì‹œí•©ë‹ˆë‹¤.
##  */

# ========================================
# ë…¸ë“œ ì°¸ì¡°
# ========================================
@onready var panel: Panel = $Panel
@onready var fairy_portrait: Sprite2D = $Panel/FairyPortrait
@onready var text_label: RichTextLabel = $Panel/TextLabel
@onready var continue_hint: Label = $Panel/ContinueHint

# ========================================
# Export ì„¤ì •
# ========================================
@export var fairy_texture: Texture2D  # ìš”ì • ì´ˆìƒí™” í…ìŠ¤ì²˜

# ========================================
# íƒ€ì´í•‘ íš¨ê³¼ ë³€ìˆ˜
# ========================================
var current_text: String = ""
var displayed_text: String = ""
var typing_index: int = 0
var typing_speed: float = 0.05
var is_typing: bool = false
var typing_timer: float = 0.0

# ========================================
# ëŒ€í™” ì§„í–‰ ë³€ìˆ˜
# ========================================
var dialogues: Array[String] = []
var current_dialogue_index: int = 0
var is_waiting_for_input: bool = false

# ========================================
# ì‹œê·¸ë„
# ========================================
signal dialogue_started()  # ëŒ€í™” ì‹œì‘
signal dialogue_line_complete()  # í•œ ì¤„ ì™„ë£Œ
signal dialogue_all_complete()  # ëª¨ë“  ëŒ€í™” ì™„ë£Œ

# ========================================
# í°íŠ¸
# ========================================
const GALMURI_9 = preload("res://Galmuri9.ttf")

func _ready():
	# ì´ˆê¸°ì—ëŠ” ìˆ¨ê¹€
	visible = false
	
	# í°íŠ¸ ì„¤ì •
	text_label.add_theme_font_override("normal_font", GALMURI_9)
	text_label.add_theme_font_size_override("normal_font_size", 18)
	continue_hint.add_theme_font_override("font", GALMURI_9)
	continue_hint.add_theme_font_size_override("font_size", 14)
	
	# ìš”ì • ì´ˆìƒí™” ì„¤ì •
	if fairy_texture and fairy_portrait:
		fairy_portrait.texture = fairy_texture
	
	# ê³„ì† íŒíŠ¸ ìˆ¨ê¹€
	continue_hint.visible = false

func _process(delta):
	# íƒ€ì´í•‘ ì¤‘ì´ë©´ íƒ€ì´ë¨¸ ì—…ë°ì´íŠ¸
	if is_typing:
		typing_timer += delta
		if typing_timer >= typing_speed:
			typing_timer = 0.0
			type_next_character()
	
	# ì…ë ¥ ëŒ€ê¸° ì¤‘ì´ë©´ Space/Enter ê°ì§€
	if is_waiting_for_input:
		if Input.is_action_just_pressed("ui_accept") or Input.is_key_pressed(KEY_SPACE):
			next_dialogue()

## /** ëŒ€í™” ì‹œì‘
##  * @param dialogue_list Array[String] í‘œì‹œí•  ëŒ€í™” ëª©ë¡
##  * @param speed float íƒ€ì´í•‘ ì†ë„ (ê¸€ìë‹¹ ì´ˆ)
##  * @returns void
##  */
func start_dialogue(dialogue_list: Array[String], speed: float = 0.05):
	print("ğŸ’¬ [ëŒ€í™”ì°½] ëŒ€í™” ì‹œì‘ - ì´ %dì¤„" % dialogue_list.size())
	dialogues = dialogue_list
	current_dialogue_index = 0
	typing_speed = speed
	visible = true
	dialogue_started.emit()
	show_next_line()

## /** ë‹¤ìŒ ëŒ€í™” ì¤„ í‘œì‹œ
##  * @returns void
##  */
func show_next_line():
	if current_dialogue_index >= dialogues.size():
		# ëª¨ë“  ëŒ€í™” ì™„ë£Œ
		print("ğŸ’¬ [ëŒ€í™”ì°½] ë§ˆì§€ë§‰ ì¤„ ì™„ë£Œ - end_dialogue í˜¸ì¶œ")
		end_dialogue()
		return
	
	print("ğŸ’¬ [ëŒ€í™”ì°½] %dë²ˆì§¸ ì¤„ í‘œì‹œ: %s" % [current_dialogue_index + 1, dialogues[current_dialogue_index]])
	current_text = dialogues[current_dialogue_index]
	displayed_text = ""
	typing_index = 0
	is_typing = true
	is_waiting_for_input = false
	typing_timer = 0.0
	continue_hint.visible = false
	
	# í…ìŠ¤íŠ¸ ì´ˆê¸°í™”
	text_label.text = ""

## /** ë‹¤ìŒ ê¸€ì íƒ€ì´í•‘
##  * @returns void
##  */
func type_next_character():
	if typing_index >= current_text.length():
		# í•œ ì¤„ íƒ€ì´í•‘ ì™„ë£Œ
		is_typing = false
		is_waiting_for_input = true
		continue_hint.visible = true
		dialogue_line_complete.emit()
		return
	
	displayed_text += current_text[typing_index]
	text_label.text = displayed_text
	typing_index += 1

## /** íƒ€ì´í•‘ ìŠ¤í‚µ (ì¦‰ì‹œ ì „ì²´ í…ìŠ¤íŠ¸ í‘œì‹œ)
##  * @returns void
##  */
func skip_typing():
	if is_typing:
		displayed_text = current_text
		text_label.text = displayed_text
		typing_index = current_text.length()
		is_typing = false
		is_waiting_for_input = true
		continue_hint.visible = true
		dialogue_line_complete.emit()

## /** ë‹¤ìŒ ëŒ€í™”ë¡œ ì§„í–‰
##  * @returns void
##  */
func next_dialogue():
	if is_typing:
		# íƒ€ì´í•‘ ì¤‘ì´ë©´ ìŠ¤í‚µ
		skip_typing()
	else:
		# ë‹¤ìŒ ì¤„ë¡œ
		current_dialogue_index += 1
		show_next_line()

## /** ëŒ€í™” ì¢…ë£Œ
##  * @returns void
##  */
func end_dialogue():
	print("ğŸ’¬ [ëŒ€í™”ì°½] ëª¨ë“  ëŒ€í™” ì™„ë£Œ - signal emit")
	visible = false
	dialogues.clear()
	current_dialogue_index = 0
	is_typing = false
	is_waiting_for_input = false
	dialogue_all_complete.emit()

## /** ëŒ€í™” ì¦‰ì‹œ ì¢…ë£Œ (ê°•ì œ)
##  * @returns void
##  */
func force_close():
	end_dialogue()

